# fvdb-examples

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  train_segmentation.py  view_checkpoint.py
.github/workflows/: codestyle.yml
depth_reconstruction/: sun_3d_dataset.py
garfvdb/: config.py  model.py
garfvdb/scene_transforms/: image_segmentation_masks.py
garfvdb/training/: dataset.py  dataset_transforms.py  segmentation.py
instance_segmentation/garfield/: README.md
instance_segmentation/garfvdb/: .gitignore  extract_segments.py  garfvdb_environment.yml  pyproject.toml  train_segmentation.py  view_checkpoint.py  visualize_clusters.py  visualize_segmentation_clusters.py
open_vocabulary_segmentation/geolangsplat/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
open_vocabulary_segmentation/geolangsplat/completions/: gls.bash
open_vocabulary_segmentation/geolangsplat/geolangsplat/: __init__.py  __main__.py  api.py  autoview.py  cameras.py  catalog.py  config.py  engine.py  errors.py  instances.py  ipc.py  lift.py  outputs.py  profile.py  sam3.py  select.py  views.py
open_vocabulary_segmentation/geolangsplat/geolangsplat/cli/: __init__.py  _bake.py  _catalog.py  _check.py  _common.py  _doctor.py  _explore.py  _render.py  _segment.py  _serve.py  _show.py  _status.py  _stop.py
open_vocabulary_segmentation/geolangsplat/geolangsplat/viewer/: __init__.py  server.py
open_vocabulary_segmentation/geolangsplat/tests/: conftest.py  test_api.py  test_assess.py  test_autoview.py  test_cameras.py  test_catalog.py  test_cli.py  test_config.py  test_instances.py  test_ipc.py  test_outputs.py  test_profile.py  test_robustness.py  test_sam3_fusion.py  test_select.py  test_stream.py  test_views.py
open_vocabulary_segmentation/langsplatv2/: .gitignore  README.md  environment.yml  pyproject.toml  train_eval.sh  train_scenes.sh
open_vocabulary_segmentation/langsplatv2/evaluation/: eval_lerf.py
open_vocabulary_segmentation/langsplatv2/evaluation/lerf_ovs/: README.md  batch_reconstruct_eval_scenes.sh  batch_train_eval_langsplat.sh  download_data.py
open_vocabulary_segmentation/langsplatv2/langsplatv2/: config.py  loss.py  model.py  util.py  vq_utils.py
open_vocabulary_segmentation/langsplatv2/langsplatv2/evaluation/: openclip_relevancy.py
open_vocabulary_segmentation/langsplatv2/langsplatv2/evaluation/datasets/: __init__.py  lerf.py  util.py
open_vocabulary_segmentation/langsplatv2/langsplatv2/scene_transforms/: __init__.py  clip_feature_encoding.py  import_original_features.py  mask_utils.py  multi_scale_sam1_masks.py  multi_scale_sam_masks.py
open_vocabulary_segmentation/langsplatv2/langsplatv2/training/: __init__.py  dataset.py  langsplatv2_writer.py  trainer.py
open_vocabulary_segmentation/langsplatv2/scripts/: query_prompt.py  train_all_levels.py  train_langsplatv2.py
point_transformer_v3/: .gitignore  README.md  compute_difference.py  download_example_data.py  minimal_inference.py  model.py  prepare_scannet_dataset.py  requirements.txt  setup_env.py  setup_env.sh
segmenation_extraction/: extract_mesh_for_segments.py
segment_mesh_extraction/: README.md  extract_mesh_segments.py  segment_mesh_extraction_environment.yml
segmentation_extraction/: README.md  extract_mesh_segments.py  pyproject.toml
surface_reconstruction/: pyproject.toml  requirements.txt  setup.py
surface_reconstruction/nksr/: .gitignore  README.md  pyproject.toml
surface_reconstruction/nksr/examples/: recons_simple.py
surface_reconstruction/nksr/nksr_fvdb/: __init__.py  coord_xform.py  presets.py  reconstructor.py  sparse_feature_hierarchy.py  svh.py
surface_reconstruction/nksr/nksr_fvdb/fields/: __init__.py  base_field.py  layer_field.py  neural_field.py
surface_reconstruction/nksr/nksr_fvdb/nn/: __init__.py  encdec.py  network.py  point_encoder.py  resnet_block.py  unet.py
surface_reconstruction/tests/: conftest.py
surface_reconstruction/tests/unit/: test_coord_xform.py  test_point_encoder.py  test_resnet_block.py  test_sparse_feature_hierarchy.py  test_utils.py  utils.py
(+42 files in other folders)
