[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fvdb-langsplatv2"
version = "0.0.1"
description = "fVDB Implementation of LangSplatV2"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fvdb-reality-capture",
    "gdown",
    "matplotlib",
    "numpy",
    "opencv-python",
    "open-clip-torch",
    "segment-anything",
    "sam2",
    "scikit-learn",
    "torch",
    "torchvision",
    "tqdm",
    "tyro",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["langsplatv2*"]
